name:                falling-ball-game
version:             0.1.0.0
synopsis:            The simple game of hitting a falling ball, written using Netwire 5.
description:         The simple game of hitting a falling ball, written using Netwire 5.
homepage:          
license:             MIT
license-file:        LICENSE
author:              Kenji Ohmori
maintainer:          ohmori@hosei.ac.jp
copyright:           2015, Kenji Ohmori
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable falling-ball-game

  ghc-options:         -O2 -Wall -fno-warn-unused-do-bind

  main-is:             Main.hs

  build-depends:       base    == 4.7.*
               ,       netwire == 5.0.1
               ,       GLFW    == 0.5.2.2
               ,       linear  == 1.18.0.1
               ,       OpenGL
               ,       transformers == 0.4.3.0

  hs-source-dirs:      src7/

  default-language:    Haskell2010
